--- a/styles/style.css
+++ b/styles/style.css
@@ -78,9 +78,7 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-
-    
+    gap: 20px;   
 }
 .feature-details{
     width: 530px;
@@ -242,4 +240,79 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/* Responsive */
+
+@media screen and (max-width: 576px) {
+    /* navs */
+    nav, .navs{
+        flex-direction: column;
+        align-items: stretch;
+        padding-left: 28px;
+    }
+    .header-details{
+        text-align: left;
+        margin-left: 50px;
+        
+    }
+    /* features */
+    .features{
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+    }
+    .feature-photo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+    .feature-details{
+        margin: auto;
+        text-align: center;
+    }
+    /* Features you will love and enjoy */
+    .loved-features{
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 50px;
+        padding-left: 50px;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+    .loved-photo{
+        margin-left: 200px;
+    }
+    /* facts */
+    .facts{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+    /* Sponsor */
+    .sponsor{
+        margin-left: 10px;
+    }
+    .sponsor-title{
+        margin: 40px 10px 40px 10px ;
+        text-align: left;
+        align-items: stretch;
+    }
+    .sponsor-logo{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        row-gap: 40px;
+        
+    }
+    .some-facts h2, .sponsor-title> h2{
+        padding-left: 0px;
+    }
+    
+
 }
