--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,7 @@ nav{
     font-weight: 700;
     font-size: 64px;
     color: #131313;
+    margin-bottom: 20px;
 }
 
 button{
@@ -69,7 +70,7 @@ button{
     height: 700px;
     margin: 50px 236px 45px 254px;
     border-radius: 8px;
-    padding-top: 50px;
+    padding-top: 90px;
 }
 
 /* Features */
@@ -93,6 +94,8 @@ button{
 .feature-title{
     color: #727272;
     padding-bottom: 24px;
+    font-size: 45px;
+    font-weight: 700;
 }
 .feature-title-black{
     color: #131313;
@@ -191,6 +194,12 @@ button{
     justify-content: space-evenly;
     align-items: center;
    flex-direction: column;
+   transition: width 2s ease, height 2s ease;
+}
+.fact:hover{
+    height: 340px;
+    width: 340px;
+    background-color: #FFF4E7;
 }
 .some-facts h2, .sponsor-title> h2{
     margin-bottom: 20px;
@@ -259,42 +268,57 @@ footer{
     /* features */
     .features{
         flex-direction: column;
-        align-items: center;
-        margin: auto;
+        /* align-items: center; */
+        /* margin: auto; */
     }
     .feature-photo{
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        margin-left: 10px;
+        /* justify-content: center;
         align-items: center;
-        margin: auto;
+        margin: auto; */
     }
     .feature-details{
-        margin: auto;
-        text-align: center;
+        /* margin: auto; */
+        text-align: left;
+        padding-left: 30px;
     }
     /* Features you will love and enjoy */
     .loved-features{
         display: flex;
         flex-direction: column-reverse;
         gap: 50px;
-        padding-left: 50px;
+        padding-left: 140px;
+        padding-bottom: 30PX;
         justify-content: center;
         align-items: center;
-        margin: auto;
+        margin:auto;
     }
     .loved-photo{
-        margin-left: 200px;
+        margin-left: 50px;
     }
     /* facts */
+    .some-facts{
+        padding-left: 0;
+        justify-content: left;
+    }
     .facts{
         display: flex;
         flex-direction: column;
         gap: 20px;
-        justify-content: center;
+        justify-content: stretch;
         align-items: center;
         margin: auto;
     }
+    .some-facts h2, .sponsor-title> h2{
+        padding-left: 0px;
+        display: flex;
+        justify-content: stretch;
+        align-items: center;
+        margin: auto;
+    }
+
     /* Sponsor */
     .sponsor{
         margin-left: 10px;
@@ -308,10 +332,13 @@ footer{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         row-gap: 40px;
-        
-    }
-    .some-facts h2, .sponsor-title> h2{
-        padding-left: 0px;
+    }   
+    /* footer */
+    footer{
+        width: 80%;
+        height: 100px;
+        justify-content: left;
+        padding-left: 0;
     }
     
 
