--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ main, footer{
 }
 /* All Descriptions */
 .header-description, .feature-description, .loved-description,
- .loved-title-description, .some-facts-description{
+ .loved-title-description, .some-facts-description, .some-projects-description{
     color: #727272;
     font-weight: 400;
     font-size: 16px;
@@ -21,6 +21,11 @@ header{
 }
 
 /* Navigation style */
+.header-name{
+    color: #131313;
+    font-weight: 700;
+    font-size: 45px;
+}
 nav{
     display: flex;
     justify-content: space-between;
@@ -123,6 +128,10 @@ button{
     gap: 20px;
     margin-bottom: 20px;
     padding-left: 30px;
+    height: 106px;
+    width: 468px;
+}
+.loved-title> h2{
     color: #131313;
     font-weight: 700;
     font-size: 45px;
@@ -224,12 +233,63 @@ button{
     color: #727272;
     padding-top: -20px;
 }
+/* Some Projects */
+.projects{
+    margin: 0 240px 40px 240px;
+    text-align: center;
+    transition: transform 6s ease-in;
+    overflow: visible;
+    filter: brightness(90%);
+}
+.pro-image:hover{
+    filter: brightness(150%);
+    transform: scale(1.8);
+    border: 1px solid red;
+}
+.row{
+
+    margin-bottom: 5px;
+}
+.projects  img{
+    height: 100%;
+    width: 100%;
+}
+.second-row, .third-row{
+    display: flex;
+    gap: 5px;
+}
+.second-row > div{
+    flex: 1;
+}
+.second-row-third-container{
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+}
+.second-row-third-container div {
+    height: calc(50% - 5px/2);
+}
+.third-row-second-container{
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(2, 1fr);
+}
+.third-row > div{
+    flex: 1;
+}
+
 /* Our Sponsor */
-.sponsor-title{
+.sponsor-title, .some-projects-title{
     margin: 0 440px 50px 440px;
     text-align: center;
     height: 129px;
     width: 542px;
+}
+.sponsor-title>h2 , .some-projects-title> h2{
+    font-size: 45px;
+    font-weight: 700;
+    color: #131313;
+    padding-bottom: 10px;
 }
 .sponsor-logo{
     display: flex;
@@ -333,6 +393,13 @@ footer{
         grid-template-columns: repeat(1, 1fr);
         row-gap: 40px;
     }   
+    /* Projects */
+    .second-row, .third-row{
+        flex-direction: column;
+    }
+    .second-row-third-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
     /* footer */
     footer{
         width: 80%;
