--- a/styles/style.css
+++ b/styles/style.css
@@ -235,19 +235,19 @@ button{
 }
 /* Some Projects */
 .projects{
-    margin: 0 240px 40px 240px;
+    margin: 0 300px 40px 240px;
+    height: 50%;
+    width: 80%;
     text-align: center;
-    transition: transform 6s ease-in;
-    overflow: visible;
+    transition: transform 3s ease-in;
     filter: brightness(90%);
 }
 .pro-image:hover{
     filter: brightness(150%);
-    transform: scale(1.8);
+    transform: scale(1.5);
     border: 1px solid red;
 }
 .row{
-
     margin-bottom: 5px;
 }
 .projects  img{
@@ -313,7 +313,10 @@ footer{
 
 /* Responsive */
 
-@media screen and (max-width: 576px) {
+@media only screen and (max-width: 576px) {
+    main, footer{
+        margin-left: 220px;
+    }
     /* navs */
     nav, .navs{
         flex-direction: column;
@@ -356,7 +359,7 @@ footer{
         margin:auto;
     }
     .loved-photo{
-        margin-left: 50px;
+        margin-left: 100px;
     }
     /* facts */
     .some-facts{
@@ -371,7 +374,7 @@ footer{
         align-items: center;
         margin: auto;
     }
-    .some-facts h2, .sponsor-title> h2{
+    .some-facts h2, .sponsor-title> h2, .some-projects-title> h2{
         padding-left: 0px;
         display: flex;
         justify-content: stretch;
@@ -383,7 +386,7 @@ footer{
     .sponsor{
         margin-left: 10px;
     }
-    .sponsor-title{
+    .sponsor-title, .some-projects-title{
         margin: 40px 10px 40px 10px ;
         text-align: left;
         align-items: stretch;
@@ -394,12 +397,37 @@ footer{
         row-gap: 40px;
     }   
     /* Projects */
-    .second-row, .third-row{
+    .projects{
+        margin: 0 20px 40px 140px;
+        height: 500px;
+        width: 200px;
+        text-align: left;
+        transition: none;
+        filter: brightness(100%);
+        display: flex;
         flex-direction: column;
+        justify-content: left;
+        align-items: left;
+        margin: auto;
     }
-    .second-row-third-container{
-        grid-template-columns: repeat(1, 1fr);
+    .pro-image{
+        height: 100%;
+        width: 100%;
     }
+    .pro-image:hover{
+        filter: brightness(150%);
+        transform: none;
+        border: none;
+    }
+    .second-row, .third-row{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .third-row-second-container{
+        display:grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+   
     /* footer */
     footer{
         width: 80%;
@@ -408,5 +436,4 @@ footer{
         padding-left: 0;
     }
     
-
 }
